# feoauth

./: .env.example  Cargo.toml  LICENSE  README.md  deny.toml  makefile
.github/worflows/: cargo_deny.yml
.github/workflows/: cargo_deny.yml
clients/feoauth-go/: go.mod  main.go
clients/feoauth-rs/: Cargo.toml
feoauth/: Cargo.toml
feoauth-core/: Cargo.toml
feoauth-core/src/: config.rs  lib.rs
feoauth-core/src/routes/authentication/: authorize.rs  mod.rs  reauthenticate.rs  signup.rs  token.rs
feoauth-core/src/utils/: mod.rs
feoauth-server/: Cargo.toml
feoauth-server/src/routes/management/: get_audit_logs.rs
feoauth-server/src/utils/: app_error.rs
feoauth-wasm/: Cargo.toml  README.md  package.json  wrangler.toml
feoauth-wasm/src/: lib.rs  main.rs  server.rs
feoauth-wasm/src/routes/authentication/: callback.rs
feoauth-wasm/src/routes/management/: invite_user.rs  mod.rs
feoauth/migrations/: 1_setup.sql
feoauth/src/: config.rs  lib.rs  server.rs
feoauth/src/routes/authentication/: reauthenticate.rs  signup.rs
feoauth/src/routes/management/: create_user.rs  get_users.rs
feoauth/src/some_module/: file_a.rs  mod.rs
konganon/: Cargo.toml
server/: Cargo.toml
server/migrations/: README.md
server/src/: config.rs  main.rs  server.rs
server/src/routes/: mod.rs
server/src/routes/authentication/: logout.rs  mod.rs
server/src/routes/management/: get_users.rs  mod.rs
server/src/utils/: app_error.rs  auth.rs  middleware.rs
