[package]
name = "feoauth-server"
version = "0.1.0"
authors = ["Spencer Bartholomew <hey@spencerbartholomew.com>"]
description = "Complete auth library for managing users and issuing JWT tokens. Embedable into any application."
homepage = "https://github.com/spencerbart/feoauth"
repository = "https://github.com/spencerbart/feoauth"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["auth", "jwt", "users", "authentication", "authorization", "identity access management"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
dotenvy = "0.15.7"
envy = "0.4.2"
http = "0.2.9"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "registry"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }  