[package]
name = "feoauth-wasm"
version = "0.1.0"
authors = ["Spencer Bartholomew <hey@spencerbartholomew.com>"]
homepage = "https://github.com/spencerbart/feoauth"
repository = "https://github.com/spencerbart/feoauth"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
feoauth-core = { path = "../feoauth-core" }
tokio = { version = "1.26.0", features = ["full"] }
