[package]
name = "feoauth-core"
version = "0.1.0"
authors = ["Spencer Bartholomew <hey@spencerbartholomew.com>"]
description = "Complete auth library for managing users and issuing JWT tokens. Embedable into any application."
homepage = "https://github.com/spencerbart/feoauth"
repository = "https://github.com/spencerbart/feoauth"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["auth", "jwt", "users", "authentication", "authorization", "identity access management"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
http = "0.2.9"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
