[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feoauth = { path = "../feoauth" }
anyhow = "1.0.69"
axum = "0.6.7"
dotenv = "0.15.0"
envy = "0.4.2"
http = "0.2.9"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "registry"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }  
